--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "range.js",
 	"description": "JavaScript's missing range function.",
 	"version": "1.1.0",
-	"license": "MIT/X11",
+	"license": "MIT",
 	"author": "Florian H.",
 	"main": "lib/range.js",
 	"scripts": {
